--- a/po/de/kghostview.po
+++ b/po/de/kghostview.po
@@ -2,8 +2,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: kghostview 0.6\n"
 "POT-Creation-Date: 1998-04-09 18:29+0200\n"
-"PO-Revision-Date: 1998-04-21 21:45 +0100\n"
-"Last-Translator: Oliver Hensel <oliver.hensel@gmx.de>\n"
+"PO-Revision-Date: 1998-05-06 15:36 +0100\n"
+"Translator: Oliver Hensel <oliver.hensel@gmx.de>\n"
+"Last-Translator: Tobias Burnus <burnus@berlin1.netsurf.de>\n"
+"Language-Team: German <kde-i18n@kde.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Transfer-Encoding: iso-8859-1\n"
 
 #: copyright.cpp:27
 msgid "Copyright"
@@ -185,9 +190,8 @@ msgid "CTRL+Insert"
 msgstr "Strg+Einfügen"
 
 #: kaccel.cpp:217 kaccel.cpp:428
-#, fuzzy
 msgid "Home"
-msgstr "Strg+Pos1"
+msgstr "Pos1"
 
 #: kaccel.cpp:218
 msgid "CTRL+Home"
