--- a/po/de/kpaint.po
+++ b/po/de/kpaint.po
@@ -2,8 +2,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: kpaint\n"
 "POT-Creation-Date: 1998-04-09 18:29+0200\n"
-"PO-Revision-Date: 1998-04-21 21:05 +0100\n"
-"Last-Translator: Oliver Hensel <oliver.hensel@gmx.de>\n"
+"PO-Revision-Date: 1998-05-06 15:40 +0100\n"
+"Translator: Oliver Hensel <oliver.hensel@gmx.de>\n"
+"Last-Translator: Tobias Burnus <burnus@berlin1.netsurf.de>\n"
+"Language-Team: German <kde-i18n@kde.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Transfer-Encoding: iso-8859-1\n"
 
 #: app.cpp:40
 msgid ""
